# osmviews-py

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  release.yml
.github/workflows/: codeql.yml  publish-to-pypi.yml  publish.yml  test-build-publish.yml  test-build.yml
src/osmviews/: __init__.py
tests/: __init__.py  test_download.py  test_osmviews.py
tests/data/: hello.txt  mini.tiff
